--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,387 @@
-@media screen and (min-width: 375px) {
-  
+/* Styles for Mobile Screens */
+@media screen and (min-width: 350px) and (max-width: 768px){
+  .landing-page{
+    width: 100%;
+    height: 120vh;
+    text-align: center;
+    padding: 3.75vh;
+  }
+  .landing-page #mobileHeroImg{
+    background-image: url(./images/illustration-hero.svg);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 40vh;
+    width: 100%;
+  }
+  .landing-page .button-col{
+    margin-bottom: 3vh;
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 0.25rem;
+    font-size: 14px;
+  }
+  .landing-page #text-content{
+    margin-top: 5vh;
+  }
+  .page2{
+    padding: 3.75vh;
+    height: 135vh;
+    text-align: center;
+  }
+  .page2 h3{
+    font-size: 3.75vh;
+    margin-bottom: 2vh;
+  }
+  .page2 p{
+    margin-bottom: 4vh;
+  }
+  .tab-bar .tab-bar-links{
+    border-bottom: 1px solid hsl(228, 17%, 77%);
+    border-top: 1px solid hsl(228, 17%, 77%);
+  }
+  .tab-bar{
+    margin-bottom: 5vh;
+  }
+  .page2-grid .grid-image-col{
+    margin-bottom: 5vh;
+  }
+  .page3{
+    height: 170vh;
+    padding: 3.75vh;
+    text-align: center;
+  }
+  .page3-grid{
+    width: 100%;
+  }
+  .page3-grid > div{
+    margin-left: auto;
+    margin-right: auto;
+    height: 40vh;
+    width: 100%;
+    margin-bottom: 4vh;
+  }
+  .page3-grid>div>img{
+    padding-top: 12px;
+  }
+  .faq-page{
+    height: 100vh;
+    width: 100%;
+    padding: 3.75vh;
+  }
+  .faq-page>h1{
+    text-align: center;
+  }
+  .faq-page>p{
+    margin-top: 2rem;
+    text-align: center;
+    color: hsl(229, 8%, 60%);
+    margin-bottom: 3.5rem;
+  }
+  .faq-page #moreInfoBtn{
+    width: 33%;
+    margin-top: 48px;
+    margin-left: 33%;
+  }
+  .footer-page{
+    height: 55vh;
+    padding: 3.75vh;
+  }
+  .footer-page>h5{
+    margin-bottom: 2.5rem;
+  }
+  .footer-page>div>input{
+    width: 100%;
+    margin-bottom: 2vh;
+    margin-top: 2vh;
+  }
+  .footer-page>div>button{
+    width: 100%;
+  }
+  .footer-page>div>button:hover{
+    background-color: white;
+    border: 2px solid hsl(0, 94%, 66%);
+    color: hsl(0, 94%, 66%);
+  }
 }
-@media screen and (min-width:1440px) {
+
+/* Meida Query for Landscape Mobile */
+@media screen and (min-width: 768px) and (max-width: 1024px) and (min-height: 350px) and (max-height: 768px){
+  .landing-page{
+    width: 100%;
+    height: 120vh;
+    text-align: center;
+    padding: 3.75vh;
+  }
+  .landing-page-grid #text-content{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .landing-page #mobileHeroImg{
+    background-image: url(./images/illustration-hero.svg);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 40vh;
+    width: 100%;
+  }
+  .landing-page .button-col{
+    margin-bottom: 3vh;
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 0.25rem;
+    font-size: 14px;
+  }
+  .page2{
+    padding: 3.75vh;
+    height: 175vh;
+    text-align: center;
+  }
+  .page2 h3{
+    font-size: 6.75vh;
+    margin-bottom: 2vh;
+  }
+  .page2 p{
+    margin-bottom: 4vh;
+  }
+  .tab-bar .tab-bar-links{
+    width: 50%;
+    margin-left: 25%;
+    border-bottom: 1px solid hsl(228, 17%, 77%);
+    border-top: 1px solid hsl(228, 17%, 77%);
+  }
+  .tab-bar{
+    margin-bottom: 5vh;
+  }
+  .page2-grid{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    text-align: left;
+  }
+  .page2-grid .grid-content-col{
+    padding: 1rem;
+  }
+  .page3{
+    height: 200vh;
+    padding: 3.75vh;
+    text-align: center;
+  }
+  .page3-grid{
+    width: 100%;
+  }
+  .page3-grid{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    height: 60%;
+    width: 92%;
+    margin-left: 4%;
+    margin-top: 5rem;
+  }
+  .page3-grid>div{
+    width: 90%;
+    height: 70%;
+  }
+  .page3-grid>div>img{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .page3-grid>div:nth-child(2){
+    margin-top: 5rem;
+  }
+  .page3-grid>div:nth-child(3){
+    margin-top: 10rem;
+  }
+  .faq-page{
+    height: 175vh;
+    width: 100%;
+    padding: 3.75vh;
+  }
+  .faq-page>h1{
+    text-align: center;
+  }
+  .faq-page>p{
+    margin-top: 2rem;
+    text-align: center;
+    color: hsl(229, 8%, 60%);
+    margin-bottom: 3.5rem;
+  }
+  .faq-page #moreInfoBtn{
+    width: 33%;
+    margin-top: 48px;
+    margin-left: 33%;
+  }
+  .footer-page{
+    height: 75vh;
+    padding: 3.75vh;
+  }
+  .footer-page>h5{
+    margin-bottom: 2.5rem;
+  }
+  .footer-page>div{
+    margin-top: 3rem;
+    margin-left: 25%;
+    width: 50%;
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+  .footer-page>div>input{
+    padding: 8px 10px;
+    border-radius: 5px;
+  }
+  .footer-page>div>button{
+    width: 80%;
+    margin-left: 7.5%;
+  }
+  .footer-page>div>button:hover{
+    background-color: white;
+    border: 2px solid hsl(0, 94%, 66%);
+    color: hsl(0, 94%, 66%);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) and (min-height: 768px){
+  .landing-page{
+    width: 100%;
+    height: 80vh;
+    text-align: center;
+    padding: 6.5vh;
+  }
+  .landing-page-grid #text-content{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .landing-page #mobileHeroImg{
+    background-image: url(./images/illustration-hero.svg);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 40vh;
+    width: 100%;
+  }
+  .landing-page .button-col{
+    margin-bottom: 3vh;
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 0.25rem;
+    font-size: 14px;
+  }
+  .page2{
+    padding: 6.5vh;
+    height: 90vh;
+    text-align: center;
+  }
+  .page2 h3{
+    font-size: 3.75vh;
+    margin-bottom: 2vh;
+  }
+  .page2 p{
+    margin-bottom: 4vh;
+  }
+  .tab-bar .tab-bar-links{
+    width: 50%;
+    margin-left: 25%;
+    border-bottom: 1px solid hsl(228, 17%, 77%);
+    border-top: 1px solid hsl(228, 17%, 77%);
+  }
+  .tab-bar{
+    margin-bottom: 5vh;
+  }
+  .page2-grid{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    text-align: left;
+  }
+  .page2-grid .grid-content-col{
+    padding: 1rem;
+  }
+  .page3{
+    height: 90vh;
+    padding: 6.5vh;
+    text-align: center;
+  }
+  .page3-grid{
+    width: 100%;
+  }
+  .page3-grid{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    height: 40vh;
+    width: 100%;
+    margin-top: 5rem;
+  }
+  .page3-grid>div{
+    width: 90%;
+    height: 70%;
+  }
+  .page3-grid>div>img{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .page3-grid>div:nth-child(2){
+    margin-top: 5rem;
+  }
+  .page3-grid>div:nth-child(3){
+    margin-top: 10rem;
+  }
+  .faq-page{
+    height: 90vh;
+    width: 100%;
+    padding: 6.5vh;
+  }
+  .faq-page>h1{
+    text-align: center;
+  }
+  .faq-page>p{
+    margin-top: 2rem;
+    text-align: center;
+    color: hsl(229, 8%, 60%);
+    margin-bottom: 3.5rem;
+  }
+  .faq-page #moreInfoBtn{
+    width: 33%;
+    margin-top: 48px;
+    margin-left: 33%;
+  }
+  .footer-page{
+    height: 25vh;
+  }
+  .footer-page>h5{
+    margin-bottom: 2.5rem;
+  }
+  .footer-page>h1{
+    width: 40%;
+    margin-left: 30%;
+  }
+  .footer-page>div{
+    margin-top: 3rem;
+    margin-left: 25%;
+    width: 50%;
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+  .footer-page>div>input{
+    padding: 8px 10px;
+    border-radius: 5px;
+  }
+  .footer-page>div>button{
+    width: 80%;
+    margin-left: 7.5%;
+  }
+  .empty{
+    width: 100%;
+    height: 50vh;
+  }
+}
+
+@media screen and (min-width:1024px) {
   .landing-page{
     width: 100%;
     height: 100vh;
     overflow: hidden;
+  }
+  .navBar{
+    padding: 1rem 6.5rem;
   }
   .landing-page-grid{
     display: grid;
@@ -28,6 +404,12 @@
   }
   .landing-page-grid h1{
     margin-bottom: 2rem;
+  }
+  #image-content{
+    background-image: url(./images/illustration-hero.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 50vh;
   }
   .page2{
     height: 100vh;
@@ -77,41 +459,18 @@
     margin-top: 5rem;
   }
   .page3-grid>div{
-    box-shadow: 3px 3px 5px 2px hsl(228, 17%, 77%);
     width: 90%;
     height: 70%;
+  }
+  .page3-grid>div>img{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
   .page3-grid>div:nth-child(2){
     margin-top: 5rem;
   }
   .page3-grid>div:nth-child(3){
     margin-top: 10rem;
-  }
-  .page3-grid>div>img{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-  .page3-grid>div>p{
-    color: hsl(229, 8%, 60%);
-    letter-spacing: 1.3px;
-    margin-bottom: 2rem;
-  }
-  .page3-grid>div>hr{
-    border: 1px dashed;
-    margin-bottom: 2rem;
-  }
-  .page3-grid>div>button{
-    background-color: hsl(231, 69%, 60%);
-    padding: 10px 20px;
-    border-radius: 5px;
-    color: white;
-  }
-  .page3-grid>div>button:hover{
-    border: 1px solid hsl(231, 69%, 60%);
-    background-color: white;
-    color: hsl(231, 69%, 60%);
   }
   .faq-page{
     height: 100vh;
@@ -125,12 +484,9 @@
     color: hsl(229, 8%, 60%);
     margin-bottom: 3.5rem;
   }
-  #moreInfoBtn{
-    text-align: center;
-    margin-top: 5rem;
-    padding: 8px 16px;
-    background-color: hsl(231, 69%, 60%);
-    color: white;
+  .page3-main-content{
+    width: 70%;
+    margin-left: 15%;
   }
   .tab-bar{
     width: 60%;
@@ -143,16 +499,8 @@
     padding: 1rem 2rem;
     text-align: center;
   }
-  .tab-bar-links:hover{
-    border-bottom: 3px solid hsl(0, 94%, 66%);
-  }
   .footer-page{
-    background-color: hsl(231, 69%, 60%);
-    width: 100%;
     height: 45vh;
-    padding-top: 2.5rem;
-    text-align: center;
-    color: white;
   }
   .footer-page>h5{
     margin-bottom: 2.5rem;
@@ -173,20 +521,83 @@
     border-radius: 5px;
   }
   .footer-page>div>button{
-    padding: 10px 22.5px;
-    background-color: hsl(0, 94%, 66%);
     width: 60%;
     margin-left: 7.5%;
-    border-radius: 5px;
   }
-  .footer-page>div>button:hover{
-    background-color: white;
-    border: 2px solid hsl(0, 94%, 66%);
-    color: hsl(0, 94%, 66%);
-  }
+}
+
+
+.footer-page{
+  background-color: hsl(231, 69%, 60%);
+  width: 100%;
+  padding-top: 2.5rem;
+  text-align: center;
+  color: white;
+}
+.footer-page>h5{
+  margin-bottom: 2.5rem;
+}
+.footer-page>div>input{
+  padding: 8px 10px;
+  border-radius: 5px;
+}
+.footer-page>div>button{
+  padding: 10px 22.5px;
+  background-color: hsl(0, 94%, 66%);
+  border-radius: 5px;
+}
+.footer-page>div>button:hover{
+  background-color: white;
+  border: 2px solid hsl(0, 94%, 66%);
+  color: hsl(0, 94%, 66%);
+}
+#moreInfoBtn{
+  text-align: center;
+  margin-top: 5rem;
+  padding: 8px 16px;
+  background-color: hsl(231, 69%, 60%);
+  color: white;
+}
+.page3-grid>div>p{
+  color: hsl(229, 8%, 60%);
+  letter-spacing: 1.3px;
+  margin-bottom: 3vh;
+}
+.page3-grid>div>button{
+  background-color: hsl(231, 69%, 60%);
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+}
+.page3-grid>div>button:hover{
+  border: 1px solid hsl(231, 69%, 60%);
+  background-color: white;
+  color: hsl(231, 69%, 60%);
+}
+.page3-grid>div>img{
+  margin-left: auto;
+  margin-right: auto;
+}
+.page3-grid>div>hr{
+  border: 1px dashed;
+  margin-bottom: 2vh;
+}
+.page3-grid>div{
+  box-shadow: 3px 3px 5px 2px hsl(228, 17%, 77%);
+  border-radius: 8px;
+}
+.tab-bar-links{
+  padding: 1rem 2rem;
+  text-align: center;
+}
+.tab-bar-links:hover{
+  border-bottom: 3px solid hsl(0, 94%, 66%);
 }
 body{
   font-family: 'Rubik', sans-serif;
+}
+.App{
+  overflow: hidden;
 }
 .landing-page-grid p{
   color: hsl(229, 8%, 60%);
